--- a/app/templates/components/canvas-toolbar.hbs
+++ b/app/templates/components/canvas-toolbar.hbs
@@ -1,2 +1,3 @@
 <h3>Canvas Toolbar</h3>
 This is the toolbar for the canvas.
+{{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'addTestNode')}}{{fa-icon 'plus'}}{{/bs-button}}
