Consolidated queries into graphCache

--- a/app/templates/components/canvas-toolbar.hbs
+++ b/app/templates/components/canvas-toolbar.hbs
@@ -1,4 +1,4 @@
-<h3>Canvas Toolbar</h3>
-This is the toolbar for the canvas.
-{{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'addTestNode')}}Add James Node{{/bs-button}}
-{{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'addDataSet')}}Add Data{{/bs-button}}
+{{!--<h3>Canvas Toolbar</h3>--}}
+
+{{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'addTestNode')}}{{fa-icon 'plus'}} Test Node{{/bs-button}}
+{{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'addDataSet')}}{{fa-icon 'plus'}} Test Data{{/bs-button}}
