--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -1,4 +1,4 @@
-{{visjs-node nId=node.id label=node.name select=(action 'toggleVisible')}}
+{{visjs-node nId=node.id label=node.name color=node.color select=(action 'toggleVisible')}}
 
 {{#if isVisible}}
 
