--- a/app/templates/components/vis-parent.hbs
+++ b/app/templates/components/vis-parent.hbs
@@ -1,4 +1,5 @@
-<h3>This is the vis-parent component. </h3> <br>
-<hr>
+{{!--<h3>This is the vis-parent component. </h3> <br>
+<hr>--}}
+
 {{canvas-toolbar model=model}}
 {{node-canvas model=model}}
