--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,3 +1,3 @@
-<h3>This is the visualization route.</h3> <br>
+{{!--<h3>This is the visualization route.</h3> <br>--}}
 <hr>
   {{vis-parent model=graphCache.items}}
