Doubleclick event doesn't bubble

--- a/app/templates/components/vis-parent.hbs
+++ b/app/templates/components/vis-parent.hbs
@@ -1,5 +1,5 @@
 {{!--<h3>This is the vis-parent component. </h3> <br>
 <hr>--}}
 
-{{canvas-toolbar model=model}}
-{{node-canvas model=model}}
+{{canvas-toolbar bubbles=false model=model}}
+{{node-canvas bubbles=false model=model}}
