--- a/app/templates/components/node-canvas.hbs
+++ b/app/templates/components/node-canvas.hbs
@@ -4,11 +4,10 @@
   {{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'toggleConnections')}}Draw Relationships{{/bs-button}}
 {{/if}}
 
-<hr>
 {{#visjs-network storeAs=edgesNetwork addEdges=editingEdges options=options edgeAdded=(action "edgeAdded")}}
   {{#each model as |node|}}
     {{#if node.isNode}}
-      {{node-view node=node id=node.id select=(action 'makeVisible' node.id)}}
+      {{node-view bubbles=false node=node id=node.id select=(action 'makeVisible' node.id)}}
     {{else}}
       {{visjs-edge eId=node.id from=node.start to=node.end arrows='to' select=(action 'selectEdge')}}
     {{/if}}
