--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -1,98 +1,86 @@
-{{visjs-node nId=node.id label=node.name cid=node.cid color=node.color select=(action 'toggleVisible')}}
+{{visjs-node nId=node.id bubbles=false label=node.name cid=node.cid posX=node.posX posY=node.posY color=node.color select=(action 'toggleVisible')}}
 
-{{#if node.isVisible}}
+{{#if node.isVisible}} {{!This is the toolbar section of the node-view component. It has the node's id and buttons}}
   {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'close')}}{{fa-icon 'times'}}{{bs-tooltip title='Close'}}{{/bs-button}}<br>
-  {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'seeConnections')}}Reveal Relationships {{fa-icon 'plus-square'}}{{bs-tooltip title='Reveal Relationships'}}{{/bs-button}}
-  <h5>See Node {{node.id}}'s Properties</h5>
+  {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'seeConnections')}}Reveal Relationships{{fa-icon 'plus-square'}}{{bs-tooltip title='Reveal Relationships'}}{{/bs-button}}
 
-  {{!properties}}
+  <div class='row'>
+    <label for="name" class='col-sm-6 col-form-label'> Node id: {{node.id}}</label>
+  </div>
+  <div class='row'>
+    <label for="name" class='col-sm-6 col-form-label'> Node Name: {{node.name}}</label>
+  </div>
+  
 
-  {{!isEditing state set to true when edit button is clicked.}}
-  {{#if isEditing}}
-    <form>
-      <div class='form-group row'>
-        <label for='name' class='col-sm-2 col-form-label'>Node Name:</label>
-          <div class='col-sm-10'>
-            {{input type='textarea' class='form-control' value=node.name}}
-          </div>
-      </div>
-    </form>
-  {{else}}
-    <form>
-      <div class='form-group row'>
-        <label for='name' class='col-sm-2 col-form-label'>Node Name:</label>
-          <div class='col-sm-10'>
-            {{input type='textarea' class='form-control-plaintext text-muted' value=node.name}}
-          </div>
-      </div>
-    </form>
-  {{/if}}
-
-
-{{!Loads the node's properties and iterates through them using key(list of properties)}}
-  {{#if isEditing}}
+  {{#if isEditing}} {{!===================== This appears when isEditing is true ===================}}
+    {{#power-select renderInPlace=true selected=choice options=types onchange=(action "chooseType") as |type|}}
+      {{type}}
+    {{/power-select}}
+    <hr>
+    {{#bs-form onSubmit=(action "saveAllProperties") as |form|}}
     {{#each-in node.properties as |key value|}}
     <form>
       <div class='form-group row'>
-        <label for='key' class='col-sm-2 col-form-label'>{{key}}:</label>
+        <label for='key' class='col-sm-2 col-form-label'>
+          {{input type='textarea' class='form-control' value=key focus-out=(action 'blurKey' key value)}}
+        </label>
+        <div class='col-sm-10'>
           <div class='col-sm-10'>
-            <div class='col-sm-10'>
-              {{input type='textarea' class='form-control' value=value}}
-            </div>
-            <div class='col-sm-2'>
-              {{#if confirmDelete}}
-                {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'cancel' key)}}{{fa-icon 'times'}}{{bs-tooltip title='Cancel'}}{{/bs-button}}
-                {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'confirmDelete' key)}}{{fa-icon 'trash'}}{{bs-tooltip title='Confirm'}}{{/bs-button}}
-              {{else}}
-                {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'deleteProperty')}}{{fa-icon 'trash'}}{{bs-tooltip title='Delete Property'}}{{/bs-button}}
-              {{/if}}
-            </div>
+            {{input type='textarea' class='form-control' value=value focus-out=(action 'blurValue' key)}}
+            {{#if confirmPropertyDelete}}
+              {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'cancel' key)}}{{fa-icon 'times'}}{{bs-tooltip title='Cancel'}}{{/bs-button}}
+              {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'confirmPropertyDelete' key)}}{{fa-icon 'check'}}{{bs-tooltip title='Confirm'}}{{/bs-button}}
+            {{else}}
+              {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'deleteProperty')}}{{fa-icon 'trash'}}{{bs-tooltip title='Delete Property'}}{{/bs-button}}
+            {{/if}}
           </div>
+        </div>
       </div>
     </form>
     {{/each-in}}
-  {{else}}
+    {{#if newProperty}}
+      <form>
+        <div class='form-group row'>
+          <label for='key' class='col-sm-2 col-form-label'>
+          {{#bs-button onClick=(action 'closeNewProperty')}}{{fa-icon 'times'}}{{/bs-button}}
+            {{input type='textarea' class='form-control' value=newPropertyKey focus-out=(action 'blurNewPropertyKey' value newPropertyKey)}}
+          </label>
+          <div class='col-sm-10'>
+            <div class='col-sm-10'>
+              {{input type='textarea' class='form-control' value=newPropertyValue focus-out=(action 'blurNewPropertyValue' newPropertyValue newPropertyKey)}}
+            </div>
+            </div>
+        </div>
+      </form>
+
+  {{/if}}
+    {{#bs-button type="primary" class='group-list-item btn-outline-success btn-xs' buttonType='submit'}}{{fa-icon 'save'}}{{bs-tooltip title='Save All Properties'}}{{/bs-button}}
+    {{!newProperty creates a new property which is automatically updated in the model, and therefore added to the list of properties and displayed.}}
+    {{#bs-button type="button" class='group-list-item btn-outline-primary btn-xs' onClick=(action 'newProperty')}}{{fa-icon 'plus-square'}}{{bs-tooltip title='Add Property'}}{{/bs-button}}
+    {{#if confirmNodeDelete}}
+      {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xl' onClick=(action 'cancelNodeDelete' node)}}{{fa-icon 'times'}}{{bs-tooltip title='Cancel'}}{{/bs-button}}
+      {{#bs-button type="button" class='group-list-item btn-outline-success btn-xl' onClick=(action 'confirmNodeDelete' node)}}{{fa-icon 'check'}}{{bs-tooltip title='Confirm'}}{{/bs-button}}
+    {{else}}
+      {{#bs-button type="button" class='group-list-item btn-outline-warning btn-xl' onClick=(action 'deleteNode' node)}}{{fa-icon 'trash'}}{{bs-tooltip title='Delete Node'}}{{/bs-button}}
+    {{/if}}
+  {{/bs-form}}
+  {{else}}{{!======================== This appears when isEditing is false =========================}}
+    <div class='row'>
+        <label for="name" class='col-sm-6 col-form-label'> Node Type: {{node.labels}}</label>
+    </div>
+    <hr>
     {{#each-in node.properties as |key value|}}
       <form>
         <div class='form-group row'>
           <label for='key' class='col-sm-2 col-form-label'>{{key}}:</label>
             <div class='col-sm-10'>
               <div class='col-sm-10'>
-                {{input type='textarea' class='form-control-plaintext' value=value}}
+                {{value}}
               </div>
             </div>
         </div>
       </form>
     {{/each-in}}
-  {{/if}}
-
-  {{#if newProperty}}
-    {{! form for new property key and value goes here}}
-    {{! form fields for newPropertyKey and newPropertyValue}}
-    <form>
-      <div class='form-group row'>
-        <label for='key' class='col-sm-2 col-form-label'>{{input type='textarea' class='form-control' value=newPropertyKey}}</label>
-          <div class='col-sm-10'>
-            <div class='col-sm-10'>
-              {{input type='textarea' class='form-control' value=newPropertyValue}}
-            </div>
-            <div class='col-sm-2'>
-              {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'saveNewProperty')}}{{fa-icon 'save'}}{{bs-tooltip title='Save New Property'}}{{/bs-button}}
-            </div>
-          </div>
-      </div>
-    </form>
-
-    {{! save action=saveNewProperty}}
-  {{/if}}
-
-
-  {{!buttons}}
-  {{#if isEditing}}
-    {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'save')}}{{fa-icon 'save'}}{{bs-tooltip title='Save'}}{{/bs-button}}
-    {{!newProperty creates a new property which is automatically updated in the model, and therefore added to the list of properties and displayed.}}
-    {{#bs-button type="button" class='group-list-item btn-outline-primary btn-xs' onClick=(action 'newProperty')}}{{fa-icon 'plus-square'}}{{bs-tooltip title='Add Property'}}{{/bs-button}}
-  {{else}}
-    {{#bs-button type="button" class='group-list-item btn-outline-primary btn-xs' onClick=(action 'edit')}}{{fa-icon 'pencil-alt'}}{{bs-tooltip title='Edit Properties'}}{{/bs-button}}
+    {{#bs-button type="button" class='group-list-item btn-outline-primary btn-xs' onClick=(action 'editModeEnable')}}{{fa-icon 'pencil-alt'}}{{bs-tooltip title='Edit Properties'}}{{/bs-button}}
   {{/if}}
 {{/if}}
