--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -1,16 +1,17 @@
-{{visjs-node nId=node.id bubbles=false label=node.name cid=node.cid posX=node.posX posY=node.posY color=node.color select=(action 'toggleVisible') selectDouble=(action 'double')}}
+{{visjs-node nId=node.id bubbles=false label=node.name cid=node.cid posX=node.posX posY=node.posY color=node.color select=(action 'toggleVisible') selectDouble=(action 'double') hover=(action 'focusNode') blur=(action 'blur')}}
 
-{{#if node.isVisible}} {{!This is the toolbar section of the node-view component. It has the node's id and buttons}}
+{{#if isHovering}}
+  <h4>{{node.name}}</h4>
+{{/if}}
+
+
+{{#if node.isVisible}} {{!This is the toolbar section of the node-view component. It has the node's editing buttons}}
   {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs' onClick=(action 'close')}}{{fa-icon 'times'}}{{bs-tooltip title='Close'}}{{/bs-button}}<br>
   {{#bs-button type="button" class='group-list-item btn-outline-success btn-xs' onClick=(action 'seeConnections')}}Reveal Relationships{{fa-icon 'plus-square'}}{{bs-tooltip title='Reveal Relationships'}}{{/bs-button}}
 
   <div class='row'>
-    <label for="name" class='col-sm-6 col-form-label'> Node id: {{node.id}}</label>
-  </div>
-  <div class='row'>
     <label for="name" class='col-sm-6 col-form-label'> Node Name: {{node.name}}</label>
   </div>
-  
 
   {{#if isEditing}} {{!===================== This appears when isEditing is true ===================}}
     {{#power-select renderInPlace=true selected=choice options=types onchange=(action "chooseType") as |type|}}
