Added connecting labels and relationship counters

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
   The main page of the web application. It holds the navbar, and is the location of the modal that forms when creating a relationship between nodes.
   --}}
 
-<div class='container bg-light rounded mb-3'>
+<div class='container-fluid bg-light rounded'>
   <div class='navbar navbar-default border-primary bg-light'>
     <div class='page-header'>
       <div class='navbar-brand text-dark'>
