--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -1,11 +1,14 @@
-{{visjs-node nId=node.id bubbles=false label=node.name cid=node.cid posX=node.posX posY=node.posY color=node.color select=(action 'toggleVisible') selectDouble=(action 'double') hover=(action 'focusNode') blur=(action 'blur')}}
-  {{#if isHovering}}
-    <strong>{{node.name}}</strong>
-    <div class='badge badge-pill' style='background:{{node.color}}'>
-    {{node.labels}}
-    </div>
-  {{/if}}
-{{!--
+{{visjs-node nId=node.id bubbles=false label=node.name cid=node.cid posX=node.posX posY=node.posY color=node.color select=(action 'selectNode' node.id)  selectDouble=(action 'double') hover=(action 'focusNode') blur=(action 'blur')}}
+  
+{{#if isHovering}}
+  <strong>{{node.name}}</strong>
+  <div class='badge badge-pill' style='background:{{node.color}}'>
+  {{node.labels}}
+  </div>
+{{/if}}
+
+
+
  {{#if node.isVisible}} {{!This is the toolbar section of the node-view component. It has the node's editing buttons}}
     {{#bs-button type="button" class='group-list-item btn-outline-danger btn-xs text-right' onClick=(action 'close')}}{{fa-icon 'times'}}{{bs-tooltip title='Close'}}{{/bs-button}}<br>
 
@@ -108,4 +111,3 @@
       
     {{/if}}
   {{/if}}
-  --}}
