--- a/app/templates/components/node-canvas.hbs
+++ b/app/templates/components/node-canvas.hbs
@@ -10,7 +10,7 @@
     {{#visjs-network bubbles=false storeAs=edgesNetwork addEdges=editingEdges options=options edgeAdded=(action "edgeAdded") canvasSelect=(action 'double')}}
         {{#each model as |node|}}
           {{#if node.isNode}}
-            {{node-view bubbles=false node=node id=node.id select=(action 'makeVisible' node.id)}}
+            {{node-view bubbles=false node=node id=node.id}}
           {{else}}
             {{visjs-edge eId=node.id from=node.start to=node.end arrows='to' select=(action 'selectEdge')}}
           {{/if}}
