--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,8 +1,8 @@
 {{!--<h3>This is the visualization route.</h3> <br>--}}
-<hr>
+
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col'>
+    <div class='col-8'>
       {{vis-parent model=graphCache.items}}
     </div>
     <div class='col-4'>
