--- a/app/templates/components/node-canvas.hbs
+++ b/app/templates/components/node-canvas.hbs
@@ -1,22 +1,26 @@
-{{#if editingEdges}}
-  {{#bs-button type='button' class='group-list-item btn-outline-danger btn-xl' onClick=(action 'toggleConnections')}}Cancel{{/bs-button}}
-{{else}}
-  {{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'toggleConnections')}}Draw Relationships{{/bs-button}}
-{{/if}}
-
-<div class='container border border-default'>
-  <div class='row'>
-    <div class='col-12'>
-    {{#visjs-network bubbles=false storeAs=edgesNetwork addEdges=editingEdges options=options edgeAdded=(action "edgeAdded") canvasSelect=(action 'double')}}
-        {{#each model as |node|}}
-          {{#if node.isNode}}
-            {{node-view bubbles=false node=node id=node.id}}
-          {{else}}
-            {{visjs-edge eId=node.id from=node.start to=node.end arrows='to' select=(action 'selectEdge')}}
-          {{/if}}
-        {{/each}}
-    {{/visjs-network}}
+<div class='container border border-disabled' onclick={{action 'toggle'}}>
+  <div class='row' style='margin-top:13px;'>
+    <div class='col' style='position:relative;'>
+      <div id='destination' style='position:absolute;right:10px;'>
+      </div>
+      {{#if editingEdges}}
+        {{#bs-button type='button' class='group-list-item btn-outline-danger btn-xl' onClick=(action 'toggleConnections')}}{{fa-icon 'times'}}{{bs-tooltip title='Cancel'}}{{/bs-button}}
+        <span style='opacity:0.75;'> Drag to create a relationship </span>
+      {{else}}
+        {{#bs-button type='button' class='group-list-item btn-outline-success btn-xl' onClick=(action 'toggleConnections')}}{{fa-icon 'pen-nib'}}{{bs-tooltip title='Draw Relationships'}}{{/bs-button}}
+      {{/if}}
     </div>
+      <div class='col-12'>
+        {{#visjs-network bubbles=false storeAs=edgesNetwork addEdges=editingEdges options=options edgeAdded=(action "edgeAdded") canvasSelect=(action 'double')}}
+          {{#each model as |node|}}
+            {{#if node.isNode}}
+              {{node-view bubbles=false node=node id=node.id}}
+            {{else}}
+              {{visjs-edge eId=node.id from=node.start to=node.end arrows='to' select=(action 'selectEdge')}}
+            {{/if}}
+          {{/each}}
+        {{/visjs-network}}
+      </div>
   </div>
 </div>
 
