--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,9 @@
 
 <div class='container-fluid'>
   <div class='page-header'>
-    <h2>{{projectName}}</h2>
+    <div class='col'>
+      <h2>{{projectName}}</h2>
+    </div>
   </div> 
   <div class='row'>
     <div class='col'>
