Fixed origin node security

--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -148,9 +148,19 @@
 
 {{/if}}
 
-  {{!Connection count}}
-  <h6> Types of connected Labels </h6>
+
+  <h6>Properties</h6>
   <ul>
+    {{#each-in model.propertiesCount as |key value|}}
+      <li>
+        {{value}} {{key}}
+      </li>
+    {{/each-in}}
+    </ul>
+
+    {{!Connection count}}
+    <h6> Types of connected Labels </h6>
+    <ul>
     {{#each-in model.labelCount as |key value|}}
       <li>
         {{value}} "{{key}}"
