Added welcome page

--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -149,7 +149,7 @@
 {{/if}}
 
 
-  <h6>Properties</h6>
+  <h6>Connected Properties</h6>
   <ul>
     {{#each-in model.propertiesCount as |key value|}}
       <li>
