--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,12 +21,14 @@ body {
  */
 a {
   text-decoration: none;
-  color: white;
+  color: black;
+  
 }
 a:hover {
-  color: white;
   text-decoration: none;
+  color: black;
 }
+
 .btn-xs {
   padding: 0 3px;
 }
