--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
 <div class='container-fluid'>
   <div class='page-header'>
     <div class='col'>
-      <h2>{{projectName}}<sup style='opacity:0.75;font-size:0.3em' class='badge badge-pill badge-success'>Graphing tool</sup></h2>
+      <h2>{{#link-to 'welcome'}}{{projectName}}{{/link-to}} <sup style='opacity:0.75;font-size:50%' class='badge badge-pill badge-success'>Graphing tool</sup></h2>
     </div>
   </div> 
   <div class='row'>
@@ -19,9 +19,6 @@
 <div class='container' style='margin:50px;'>
   <div class='row'>
     <div class='col'>
-    Welcome to Graph9<hr>
-    Click login to create your own graph and get started!
-    {{#bs-button onClick=(action 'login')}}Login{{/bs-button}}
     </div>
   </div>
 </div>
