--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -1,15 +1,13 @@
 <div class='container'>
 
   <div class='row'>
-    <div class='col'></div>
-    <div class='col'>
+    <div class='col offset-md-4'>
       <h3>Welcome to Graph9!</h3>
     </div>
-    <div class='col'></div>
   </div>
 
   <div class='row'>
-    <div class='col'>
+    <div class='col offset-md-3'>
       Click login to create your own graph and get started!
       <br>
       {{#bs-button onClick=(action 'login')}}Login{{/bs-button}}
