--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -54,7 +54,7 @@
   {{#if isEditing}}
     {{#if newLabel}}
         {{#bs-button class='badge badge-pill badge-success' onClick=(action 'addNewLabel')}}{{fa-icon 'caret-down'}}{{bs-tooltip title='Close dropdown'}}{{/bs-button}}
-        {{#power-select renderInPlace=true selected=labelChoice options=labelTypes onchange=(action 'chooseLabel') as |type|}}
+        {{#power-select renderInPlace=true selected=labelChoice options=labelTypes onkeydown=(action 'customLabel') onchange=(action 'chooseLabel') as |type|}}
           {{type}}
         {{/power-select}}
       {{else}}
@@ -147,6 +147,10 @@
   {{/each-in}}
 
 {{/if}}
+
+{{#each (group-by  model.propertiesCount) as |properties|}}
+  {{properties}}
+{{/each}}
 
 
   <h6>Connected Properties</h6>
